# dspy-rlm-hooks

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.auto/: log.jsonl  measure.sh  prompt.md
.github/: PULL_REQUEST_TEMPLATE.md  contributing.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
examples/: async_context_injection.py  budget_guard.py  code_sanitizer.py  error_retry.py
src/dspy_rlm_hooks/: __init__.py  patcher.py  predict_rlm_compat.py  types.py  utils.py
tests/: conftest.py  test_async.py  test_basic.py  test_e2e.py  test_hooks.py  test_init_coverage.py  test_init_imports.py  test_patcher.py  test_patcher_extended.py  test_predict_rlm_compat.py  test_predict_rlm_compat_mocked.py  test_smoke.py  test_utils.py  test_version_compatibility.py
