[project]
name = "dspy-rlm-hooks"
version = "0.1.6"
description = "Lifecycle instrumentation for DSPy's RLM (Recursive Language Model)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
keywords = [
  "dspy",
  "ai",
  "recursive language model",
  "hooks",
  "instrumentation",
  "rlm",
]
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["dspy>=3.1.0", "pydantic>=2.0.0"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/thememium/dspy-rlm-hooks"
Documentation = "https://github.com/thememium/dspy-rlm-hooks"
Repository = "https://github.com/thememium/dspy-rlm-hooks.git"
Issues = "https://github.com/thememium/dspy-rlm-hooks/issues"
Changelog = "https://github.com/thememium/dspy-rlm-hooks/blob/master/CHANGELOG.md"

[project.optional-dependencies]
predict-rlm = ["predict-rlm>=0.1.0"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "isort>=8.0.1",
  "poethepoet>=0.46.0",
  "pytest-asyncio>=0.26.0",
  "pytest>=9.0.3",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.13",
  "ty>=0.0.37",
  "usechange>=0.1.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dspy_rlm_hooks*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["asyncio: marks tests as async (pytest-asyncio)"]
filterwarnings = [
  "ignore::DeprecationWarning:dspy.predict.avatar.signatures",
  "ignore::DeprecationWarning:dspy.teleprompt.avatar_optimizer",
]

[tool.deptry]
known_first_party = ["dspy_rlm_hooks"]
exclude = ["venv", "\\.venv", "tests", "\\.git"]
ignore_notebooks = true

[tool.ty.analysis]
allowed-unresolved-imports = ["predict_rlm"]

[tool.poe.tasks]
dev = "uv run src/dspy_rlm_hooks/__init__.py"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
test-e2e = "uv run pytest tests/ -v --run-e2e"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"
